// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocInspector > snapshot > should match the snapshot across all variants > docName=empty 1`] = `
<div>
  <aside
    class="relative hidden w-72 shrink-0 flex-col border-l border-rule bg-paper-2 md:flex"
    data-testid="doc-inspector"
  >
    <div
      class="flex items-center gap-2 border-b border-rule px-4 py-3"
    >
      <span
        class="flex-1 truncate font-mono text-[9px] uppercase tracking-wider text-ink-3"
        data-testid="doc-inspector-name"
      >
        —
      </span>
      <button
        aria-label="Collapse inspector"
        class="items-center justify-center rounded-md transition-colors text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink hidden h-5 w-5 md:inline-flex"
        data-testid="doc-inspector-collapse"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex border-b border-rule"
    >
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-outline"
        type="button"
      >
        OUTLINE
      </button>
      <button
        aria-current="page"
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-ink text-ink"
        data-testid="doc-inspector-tab-info"
        type="button"
      >
        INFO
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-history"
        type="button"
      >
        HISTORY
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-actions"
        type="button"
      >
        ACTIONS
      </button>
    </div>
    <div
      class="flex-1 overflow-auto"
      data-testid="doc-inspector-pane-info"
    >
      <div
        class="px-4 py-3.5"
        data-testid="doc-inspector-info"
      />
    </div>
  </aside>
</div>
`;

exports[`DocInspector > snapshot > should match the snapshot across all variants > section=info 1`] = `
<div>
  <aside
    class="relative hidden w-72 shrink-0 flex-col border-l border-rule bg-paper-2 md:flex"
    data-testid="doc-inspector"
  >
    <div
      class="flex items-center gap-2 border-b border-rule px-4 py-3"
    >
      <span
        class="flex-1 truncate font-mono text-[9px] uppercase tracking-wider text-ink-3"
        data-testid="doc-inspector-name"
      >
        My doc
      </span>
      <button
        aria-label="Collapse inspector"
        class="items-center justify-center rounded-md transition-colors text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink hidden h-5 w-5 md:inline-flex"
        data-testid="doc-inspector-collapse"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex border-b border-rule"
    >
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-outline"
        type="button"
      >
        OUTLINE
      </button>
      <button
        aria-current="page"
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-ink text-ink"
        data-testid="doc-inspector-tab-info"
        type="button"
      >
        INFO
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-history"
        type="button"
      >
        HISTORY
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-actions"
        type="button"
      >
        ACTIONS
      </button>
    </div>
    <div
      class="flex-1 overflow-auto"
      data-testid="doc-inspector-pane-info"
    >
      <div
        class="px-4 py-3.5"
        data-testid="doc-inspector-info"
      />
    </div>
  </aside>
</div>
`;

exports[`DocInspector > snapshot > should match the snapshot across all variants > section=outline 1`] = `
<div>
  <aside
    class="relative hidden w-72 shrink-0 flex-col border-l border-rule bg-paper-2 md:flex"
    data-testid="doc-inspector"
  >
    <div
      class="flex items-center gap-2 border-b border-rule px-4 py-3"
    >
      <span
        class="flex-1 truncate font-mono text-[9px] uppercase tracking-wider text-ink-3"
        data-testid="doc-inspector-name"
      >
        My doc
      </span>
      <button
        aria-label="Collapse inspector"
        class="items-center justify-center rounded-md transition-colors text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink hidden h-5 w-5 md:inline-flex"
        data-testid="doc-inspector-collapse"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex border-b border-rule"
    >
      <button
        aria-current="page"
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-ink text-ink"
        data-testid="doc-inspector-tab-outline"
        type="button"
      >
        OUTLINE
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-info"
        type="button"
      >
        INFO
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-history"
        type="button"
      >
        HISTORY
      </button>
      <button
        class="flex-1 border-b-2 px-1.5 py-2 text-center font-mono text-[9px] uppercase tracking-wider transition-colors border-transparent text-ink-3 hover:text-ink-2"
        data-testid="doc-inspector-tab-actions"
        type="button"
      >
        ACTIONS
      </button>
    </div>
    <div
      class="flex-1 overflow-auto"
      data-testid="doc-inspector-pane-outline"
    >
      <div
        class="px-4 py-3.5"
      >
        <div
          class="font-mono uppercase tracking-[0.11em] text-[9px] text-ink-4 mb-2"
        >
          OUTLINE
           ·
           
          0 SECTIONS
        </div>
        <p
          class="font-serif text-[12px] italic text-ink-3"
          data-testid="outline-empty"
        >
          No headings yet. Add headings to the document to build its outline.
        </p>
      </div>
    </div>
  </aside>
</div>
`;
